[REFACTOR] 가게 리스트 조회할 때 평점이랑 리뷰 개수 같이 제공